examples/test/testpolicy17861.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17861
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key37: value30
      key1: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value24
          key20: value4
      podSelector:
        matchLabels:
          key42: value38
